Add logging and telemetry configuration to properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,8 @@ mentoria.jwt.secret=UmaFraseMuitoSecretaComMaisDe32CaracteresParaFuncionar123
 smallrye.jwt.verify.key=${jwt.secret}
 smallrye.jwt.sign.key=${jwt.secret}
 smallrye.jwt.verify.algorithm=HS256
+
+quarkus.log.level=DEBUG
+quarkus.log.category."io.quarkus".level=DEBUG
+quarkus.hibernate-orm.log.sql=true
+quarkus.datasource.jdbc.telemetry=true
